# testDocker

export/: helloTest
hello world/: CMakeLists.txt  Dockerfile  docker-compose.debug.yml  docker-compose.yml  entrypoint.sh
